fix(Button): :bug: Fix icon being clipped in Firefox browser
fixes #655

--- a/packages/react/src/components/Button/Button.module.css
+++ b/packages/react/src/components/Button/Button.module.css
@@ -24,6 +24,10 @@
   position: relative;
 }
 
+.button svg {
+  overflow: visible;
+}
+
 .button.small::before {
   position: absolute;
   top: 0;
